--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -195,9 +195,9 @@ range of explanatory programming tasks that can now be harnessed in .NET Core an
 You can interactively explore and compare each of `#Script` languages in **C#'s 101 LINQ Examples**:
 
 <div class="text-center">
-    <a href="/linq/restriction-operators" class="btn btn-outline-primary btn-lg">template</a>
-    <a href="/linq/restriction-operators?lang=code" class="btn btn-outline-primary btn-lg">code</a>
-    <a href="/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">lisp</a>
+    <a href="https://sharpscript.net/linq/restriction-operators" class="btn btn-outline-primary btn-lg">template</a>
+    <a href="https://sharpscript.net/linq/restriction-operators?lang=code" class="btn btn-outline-primary btn-lg">code</a>
+    <a href="https://sharpscript.net/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">lisp</a>
 </div>
 
 ### Transition to JS Pipeline Operator Syntax
@@ -963,7 +963,7 @@ To improve compatibility with existing Common Lisp source code it also implement
 as well as all missing functions required to implement C# LINQ 101 Examples in Lisp:
 
 <div class="text-center my-3">
-    <a href="/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">Lisp LINQ Examples</a>
+    <a href="https://sharpscript.net/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">Lisp LINQ Examples</a>
 </div>
 
 To improve readability and familiarity it also adopts a number of **Clojure** syntax for defining a 
@@ -1929,7 +1929,7 @@ Another way to generate output from Lisp is to use its built-in print functions 
 A great resource for learning Script Lisp is seeing it in action by seeing how to implement **C#'s 101 LINQ Examples in Lisp**:
 
 <div class="text-center py-5">
-    <a href="/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">Lisp LINQ Examples</a>
+    <a href="https://sharpscript.net/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">Lisp LINQ Examples</a>
 </div>
 
 ### Explore APIs in real-time
