--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -789,13 +789,13 @@ But for blocks like [capture](https://sharpscript.net/docs/blocks#capture) which
 Even when used from within `code` statements:
 
 ```hbs
-#capture out
+{% raw %}#capture out
     <ul>
     {{#each range(3)}}
         <li>{{it}}</li>
     {{/each}}
     </ul>
-/capture
+/capture{% endraw %}
 ```
 
 Whilst the new [function blocks](https://sharpscript.net/docs/blocks#function) body should always be defined using `code` statement block:
@@ -1008,7 +1008,7 @@ starts a .NET Core App Server that simulates a fully configured .NET Core App.
 In this case it's running in the [redis Sharp App](https://github.com/sharp-apps/redis) directory where it was able to access its static web assets
 as well as its redis-server connection configured in its [app.settings](https://github.com/sharp-apps/redis/blob/master/app.settings).
 
-```lisp
+```l
 ; quick lisp test!
 (+ 1 2 3)
 
