--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -1228,7 +1228,7 @@ SetConfig(new HostConfig {
 
 #### Annotated Lisp TCP REPL Transcript
 
-```lisp
+```common-lisp
 ; resolve `ITwitterUpdates` IOC dependency and assign it to `twitter`
 (def twitter (resolve "ITwitterUpdates"))
 
@@ -1333,7 +1333,7 @@ where it provides instant feedback whilst you develop in real-time:
 
 ### Annotated Lisp watch script
 
-```lisp
+```common-lisp
 ;<!--
 ; db sqlite
 ; db.connection northwind.sqlite
@@ -1624,7 +1624,7 @@ both .NET Collections and cons cells, e.g:
 
 To see what this looks like in action here's an annotated simple real-world example that heavily utilizes .NET interop:
 
-```lisp
+```common-lisp
 ; define function and assign to `parse-rss` value in Lisp interpreters symbols table
 (defn parse-rss [xml]
     ; define local variables used within this scope
@@ -1750,7 +1750,7 @@ context.Init();
 You can load these scripts by symbol name where it assumes a `.l` extension, by quoting the argument so 
 Lisp doesn't try to evaluate it as an argument, e.g:
 
-```lisp
+```common-lisp
 (load 'lib1)
 
 (lib-calc 4 5) ;= 9
@@ -1759,7 +1759,7 @@ Lisp doesn't try to evaluate it as an argument, e.g:
 Alternatively you can specify the virtual path to the script. You can load multiple scripts with the same definitions,
 in Lisp this just updates the value assigned to the symbol name with the latest definition, e.g:
 
-```lisp
+```common-lisp
 (load "lib1.l")
 
 (lib-calc 4 5) ;= 9
@@ -1773,7 +1773,7 @@ in Lisp this just updates the value assigned to the symbol name with the latest 
 
 Inspired by [Deno](https://deno.land) you can also import remote scripts from URLs, e.g:
 
-```lisp
+```common-lisp
 (load "https://example.org/lib.l")
 ```
 
@@ -1791,13 +1791,13 @@ For Sharp Scripts or Apps using the `web` or `app` dotnet tools it's stored in i
 
 There's also first-class support for gists which you can reference with `gist:<gist-id>`, e.g:
 
-```lisp
+```common-lisp
 (load "gist:2f14d629ba1852ee55865607f1fa2c3e")
 ```
 
 This will load all gist files in gist order, if you only to load a single file from a gist you can specify it with: 
 
-```lisp
+```common-lisp
 (load "gist:2f14d629ba1852ee55865607f1fa2c3e/lib1.l")
 ```
 
@@ -1810,13 +1810,13 @@ respective authors.
 
 Index library references can be loaded using the format `index:<name>`, e.g:
 
-```lisp
+```common-lisp
 (load "index:lib-calc")
 ```
 
 Which also support being able to reference individual gist files:
 
-```lisp
+```common-lisp
 (load "index:lib-calc/lib1.l")
 ```
 
@@ -1827,7 +1827,7 @@ to your gist with your preferred name in the [Gist Index Comments](https://gist.
 
 You can view the source code of any load script references with `load-src`, e.g: 
 
-```lisp
+```common-lisp
 (load-src 'lib)
 (load-src "/dir/lib2.l")
 (load-src "https://example.org/lib.l")
