--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -20,7 +20,7 @@ Essentially all Content Type Serializers (i.e. Serialization Formats) used in Se
 are currently buffered in .NET Core 3. (we'll look into extending native async serialization support to our own serializers in a future release).
 
 .NET Core 3 does allow you to [turn off this restriction on a per-request basis](https://github.com/aspnet/AspNetCore/issues/7644)
-where you can control by turning off buffering of sync serializers with:
+which can be controlled by turning off buffering of sync serializers with:
 
 ```csharp
 SetConfig(new HostConfig {
