--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -68,6 +68,109 @@ public class ServerEventsFeature : IPlugin
 }
 ```
 
+### Upgrading to .NET Core 3.0
+
+ServiceStack's [.NET Core Project Templates](/web-new) continue to be configured to use .NET Core 2.1 LTS until 
+[.NET Core 3.1 LTS](https://dotnet.microsoft.com/platform/support/policy/dotnet-core) is released (scheduled for November 2019).
+
+In the meantime you can follow these steps to manually update them to .NET Core 3:
+
+Replace the `<TargetFramework>` in the Host and Test projects to target **netcoreapp3.0**:
+
+```xml
+- <TargetFramework>netcoreapp2.1</TargetFramework>
++ <TargetFramework>netcoreapp3.0</TargetFramework>
+```
+
+Remove the reference to **Microsoft.AspNetCore.App** in the host project:
+
+```xml
+- <PackageReference Include="Microsoft.AspNetCore.App" />
+```
+
+Replace `IHostingEnvironment` with `IWebHostEnvironment` and add the **Microsoft.Extensions.Hosting** namespace:
+
+```csharp
++ using Microsoft.Extensions.Hosting;
++ public void Configure(IApplicationBuilder app, IWebHostEnvironment env)
+- public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+```
+
+Disable Endpoint Routing for MVC Projects using the 
+[default MVC Routing](https://github.com/NetCoreApps/Chat/blob/995a6bdabcf14fba65276c963a5d95785d60e7ad/src/Chat/Startup.cs#L60-L65):
+
+```csharp
+- services.AddMvc();
++ services.AddMvc(option => option.EnableEndpointRouting = false);
+```
+
+For reference here were the commits to upgrade [techstacks.io](https://techstacks.io), [validation.web-app.io](http://validation.web-app.io) and 
+[chat.netcore.io](http://chat.netcore.io) to .NET Core 3.0:
+
+    - [Upgrade TechStacks to .NET Core 3.0](https://github.com/NetCoreApps/TechStacks/commit/3d8b88c9f85f429293ca081a0b3b2e6d2a909815)
+    - [Upgrade World Validation to .NET Core 3.0](https://github.com/NetCoreApps/Validation/commit/876b38563c49493ac2158ca130e2ec1dee95b222)
+    - [Upgrade Chat to .NET Core 3.0](https://github.com/NetCoreApps/Chat/commit/db390375b39377fef243871a81c100a3c15f5f57)
+      - [Switch to Server Events Async APIs](https://github.com/NetCoreApps/Chat/commit/995a6bdabcf14fba65276c963a5d95785d60e7ad)
+
+### Upgrading Docker and Travis CI to .NET Core 3.0
+
+Projects following our [Deployment to Docker AWS ECS guide](/deploy-netcore-docker-aws-ecs) requires a few more changes since travis-ci
+does not natively support .NET Core 3.0 yet but you can install it from a snap, but requires a recent distro. Here's a complete working
+**.travis.yml** configuration for building .NET Core 3.0 projects:
+
+#### [.travis.yml](https://github.com/NetCoreApps/Chat/blob/master/.travis.yml)
+
+```yml
+dist: xenial
+addons:
+  snaps:
+  - name: dotnet-sdk
+    classic: true
+    channel: latest/stable
+sudo: required
+language: csharp
+mono: none
+script:
+  - sudo snap alias dotnet-sdk.dotnet dotnet
+  - dotnet --version
+  - chmod +x ./deploy-envs.sh
+  - chmod +x ./scripts/build.sh
+  - chmod +x ./scripts/deploy.sh
+  - cd scripts && ./build.sh
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then ./deploy.sh; fi
+```
+
+The .NET Core 3.0 Docker Images are now being 
+[published to Microsoft's Container Registry](https://devblogs.microsoft.com/dotnet/net-core-container-images-now-published-to-microsoft-container-registry/#user-content-net-core-30-images), the [recommended Dockerfile format](https://docs.docker.com/engine/examples/dotnetcore/) for .NET Core 3.0 Apps now looks like:
+
+#### [Dockerfile](https://github.com/NetCoreApps/Chat/blob/master/Dockerfile)
+
+```Dockerfile
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
+WORKDIR /app
+
+# copy csproj and restore as distinct layers
+COPY src/*.sln .
+COPY src/Chat/*.csproj ./Chat/
+RUN dotnet restore
+
+# copy everything else and build app
+COPY src/Chat/. ./Chat/
+WORKDIR /app/Chat
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS runtime
+WORKDIR /app
+COPY --from=build /app/Chat/out ./
+ENV ASPNETCORE_URLS http://*:5000
+ENTRYPOINT ["dotnet", "Chat.dll"]
+```
+
+More changes in .NET Core 3.0 changes can be found in
+[ASP.NET Core 2.2 to 3.0 Migration Guide](https://docs.microsoft.com/en-us/aspnet/core/migration/22-to-30?view=aspnetcore-2.2&tabs=visual-studio)
+
+
 ### Upgrade to Fluent Validation v8.5
 
 ServiceStack's interned version of Fluent Validation has been updated to its [latest v8.5 Release](https://github.com/JeremySkinner/FluentValidation/releases).
