--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -109,6 +109,7 @@ For reference here were the commits to upgrade [techstacks.io](https://techstack
 
     - [Upgrade TechStacks to .NET Core 3.0](https://github.com/NetCoreApps/TechStacks/commit/3d8b88c9f85f429293ca081a0b3b2e6d2a909815)
     - [Upgrade World Validation to .NET Core 3.0](https://github.com/NetCoreApps/Validation/commit/876b38563c49493ac2158ca130e2ec1dee95b222)
+    - [Upgrade Sharp Script to .NET Core 3.0](https://github.com/ServiceStack/sharpscript/commit/aa47b53d102a7d4d7a75b54574728487237d5fb1)
     - [Upgrade Chat to .NET Core 3.0](https://github.com/NetCoreApps/Chat/commit/db390375b39377fef243871a81c100a3c15f5f57)
       - [Switch to Server Events Async APIs](https://github.com/NetCoreApps/Chat/commit/995a6bdabcf14fba65276c963a5d95785d60e7ad)
 
