--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -146,7 +146,7 @@ The .NET Core 3.0 Docker Images are now being
 
 #### [Dockerfile](https://github.com/NetCoreApps/Chat/blob/master/Dockerfile)
 
-```Dockerfile
+```dockerfile
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
 WORKDIR /app
 
