--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -115,9 +115,10 @@ For reference here were the commits to upgrade [techstacks.io](https://techstack
 
 ### Upgrading Docker and Travis CI to .NET Core 3.0
 
-Projects following our [Deployment to Docker AWS ECS guide](/deploy-netcore-docker-aws-ecs) requires a few more changes since travis-ci
-does not natively support .NET Core 3.0 yet but you can install it from a snap, but requires a recent distro. Here's a complete working
-**.travis.yml** configuration for building .NET Core 3.0 projects:
+Projects following our [Deployment to Docker AWS ECS guide](/deploy-netcore-docker-aws-ecs) requires a few more changes as travis-ci
+does not natively support .NET Core 3.0 yet, but it can still be [installed from a snap](https://docs.travis-ci.com/user/installing-dependencies/#installing-snap-packages-with-the-snaps-addon) which requires using either their `xenial` or `bionic` distro images. 
+
+A complete working **.travis.yml** configuration for building .NET Core 3.0 projects now looks like:
 
 #### [.travis.yml](https://github.com/NetCoreApps/Chat/blob/master/.travis.yml)
 
