--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -172,6 +172,15 @@ ENTRYPOINT ["dotnet", "Chat.dll"]
 More changes in .NET Core 3.0 changes can be found in
 [ASP.NET Core 2.2 to 3.0 Migration Guide](https://docs.microsoft.com/en-us/aspnet/core/migration/22-to-30?view=aspnetcore-2.2&tabs=visual-studio)
 
+### Troubleshooting
+
+If [ServiceStack Razor Pages](/netcore-razor) have issues resolving views after upgrading to .NET Core 3.0, disable pre-compiled views:
+
+```csharp
+<MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
+```
+
+> See this [Customer Forums Post](https://forums.servicestack.net/t/razor-pages-working-on-net-core-3-0/7850/6) for more info.
 
 ### Upgrade to Fluent Validation v8.5
 
