update links to ref x /dotnet-tool

--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -460,7 +460,7 @@ install features which can be installed with:
 
     $ dotnet tool install --global mix
 
-The same functionality is also built into the cross-platform [web](/web-tool) and Windows [`app`](/netcore-windows-desktop) 
+The same functionality is also built into the cross-platform [x](/dotnet-tool) and Windows [`app`](/netcore-windows-desktop) 
 dotnet tools which can be updated to the latest version with:
 
     $ dotnet tool update -g web
@@ -2914,7 +2914,7 @@ Which will emit the **StandardOutput** of the command if successful, otherwise i
 the **StandardError**. Checkout the [Error Handling docs](https://sharpscript.net/docs/error-handling) for how to handle exceptions.
 
 With the features in this release, `#Script` has now became our preferred way to create x-plat shell scripts which can be run
-with the Windows [app](/netcore-windows-desktop) or x-plat [web](/web-tool) dotnet tool which runs everywhere .NET Core does.
+with the Windows [app](/netcore-windows-desktop) or x-plat [x](/dotnet-tool) dotnet tool which runs everywhere .NET Core does.
 
 As such, all scripts in [ServiceStack/mix](https://github.com/ServiceStack/mix) provides a good collection of `.ss` scripts to check out
 which are used to maintain the Gist content that powers the new `mix` feature.
@@ -3332,7 +3332,7 @@ Now everyone can launch a Windows Desktop Sharp App by specifying the name of th
 
 <iframe width="896" height="525" src="https://www.youtube.com/embed/FlKeaav0gt8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-> OSX or Linux users can run Sharp Apps with the cross-platform [web](https://docs.servicestack.net/web-tool) dotnet tool instead
+> OSX or Linux users can run Sharp Apps with the cross-platform [web](https://docs.servicestack.net/dotnet-tool) dotnet tool instead
 
 #### redis
 
@@ -3361,7 +3361,7 @@ Making Sharp Apps both easy to discover as well as launch.
 
 ### Cross Platform
 
-If you're using macOS or Linux you can run all Sharp Apps using the cross-platform [web](/web-tool) dotnet tool where it will launch
+If you're using macOS or Linux you can run all Sharp Apps using the cross-platform [x](/dotnet-tool) dotnet tool where it will launch
 in your preferred Web Browser instead:
 
     $ web open redis    
@@ -3767,7 +3767,7 @@ it can also be run directly from a **Gist URL**, **Gist Id**, **GitHub Repo** or
 
 As Sharp Apps are just .NET Core Web Apps, the same App can be run within a Chromium Desktop App with 
 [app](https://docs.servicestack.net/netcore-windows-desktop), cross-platform on Windows, macOS or Linux with 
-[web](/web-tool) in the preferred browser or hosted on a server where it's accessible to everyone with an internet connection.
+[x](/dotnet-tool) in the preferred browser or hosted on a server where it's accessible to everyone with an internet connection.
 
 Not only does not needing to compile Sharp Apps dramatically simplify App development but it also dramatically simplifies 
 App deployment where you can completely skip all CI and build steps as there's nothing to build or deploy with the built-in
