--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -1091,7 +1091,7 @@ and Clojure's popular shorter aliases for `fn`, `def`, `defn` - improving source
 
 In addition to being a 1st class language option in `#Script`, Lisp's dynamism and extensibility makes it particularly 
 well suited for explanatory programming whose access via a REPL is now built into the latest 
-[web](/web-tool) and [app](/netcore-windows-desktop) dotnet tools 
+[x](/dotnet-tool) and [app](/netcore-windows-desktop) dotnet tools 
 which can be quickly installed in any Windows, macOS or Linux OS (with [.NET Core](https://dotnet.microsoft.com/download/dotnet-core/3.0)) with: 
 
     $ dotnet tool install -g web
