--- a/docs/_releases/v5.8.md
+++ b/docs/_releases/v5.8.md
@@ -18,6 +18,11 @@ With the release of [.NET Core 3.1 LTS](https://devblogs.microsoft.com/dotnet/an
 and tools to **.NET Core 3.1 LTS** whilst continuing to support existing **.NET Core 2.1+** and **.NET Framework** projects including 
 [ASP.NET Core Apps on the .NET Framework](/templates-corefx).
 
+You can view all available .NET Core Templates using the [x dotnet tool](/dotnet-tool) and running [x new](/dotnet-new):
+
+    $ dotnet tool install --global x 
+    $ x new
+
 ### .NET Core 3.1 LTS Project Templates
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vue-nuxt.png)](/web-new)
