--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1615,7 +1615,7 @@ makes it even easier to embed markdown content directly in web pages which works
 ```
 
 Which is now the easiest and preferred way to embed Markdown content in content-rich hybrid web pages like 
-[Razor Rockstars content pages](https://github.com/NetCoreTemplates/sharp-webapp/blob/master/rockstars/dead/cobain/index.html), 
+[Razor Rockstars content pages](https://github.com/NetCoreTemplates/bare-webapp/blob/master/rockstars/dead/cobain/index.html), 
 or even the [blocks.html WebPage itself](https://github.com/NetCoreApps/TemplatePages/blob/master/src/wwwroot/docs/blocks.html) which 
 makes extensive use of markdown.
 
@@ -2389,7 +2389,7 @@ Most development will happen within `/client` which is automatically published t
 
 #### client
 
-The difference with [sharp-webapp](https://github.com/NetCoreTemplates/sharp-webapp) is that the client source code is maintained in the `/client` folder and uses [Parcel JS](https://parceljs.org) to automatically bundle and publish your App to `/app/wwwroot` which is updated with live changes during development.
+The difference with [bare-webapp](https://github.com/NetCoreTemplates/bare-webapp) is that the client source code is maintained in the `/client` folder and uses [Parcel JS](https://parceljs.org) to automatically bundle and publish your App to `/app/wwwroot` which is updated with live changes during development.
 
 The client folder also contains the npm [package.json](https://github.com/NetCoreTemplates/parcel-webapp/blob/master/client/package.json) which contains all npm scripts required during development.
 
