use implementation for Java deps

--- a/docs/_releases/v4.5.8.md
+++ b/docs/_releases/v4.5.8.md
@@ -259,7 +259,7 @@ your Android Studio **build.gradle** with:
 
 ```
 dependencies {
-    compile 'net.servicestack:android:1.0.41'
+    implementation 'net.servicestack:android:1.0.41'
     ...
 }
 ```
@@ -269,7 +269,7 @@ Whilst other Java/JVM languages running on JVM (JRE 7+) can use the pure Java
 in Gradle with:
 
 ```
-compile 'net.servicestack:client:1.0.41'
+implementation 'net.servicestack:client:1.0.41'
 ```
 
 > See the docs for [Maven examples](/java-server-events-client)
